@@ -1,0 +1,11 @@
+DECL|class|TableDialog
+DECL|function|TableDialog
+DECL|function|create
+DECL|function|main
+DECL|function|slotValueChanged
+DECL|member|gridLayout
+DECL|member|model
+DECL|member|spinPrecision
+DECL|member|tableView
+DECL|member|verticalSpacer
+DECL|variable|rowCount
