@@ -1,0 +1,2 @@
+SOURCES = testtable2.cpp
+QT += widgets
