@@ -1,0 +1,9 @@
+DECL|class|TreeDialog
+DECL|function|TreeDialog
+DECL|function|create
+DECL|function|main
+DECL|function|slotValueChanged
+DECL|member|gridLayout
+DECL|member|spinPrecision
+DECL|member|treeWidget
+DECL|member|verticalSpacer
